--- a/.github/workflows/export-notion.yml
+++ b/.github/workflows/export-notion.yml
@@ -3,6 +3,7 @@ name: Export my notion workspace
 on:
   schedule:
     - cron: "0 */6 * * *"  # Call the export every 6 hours
+  workflow_dispatch:
 
 jobs:
   export:
