--- a/.github/workflows/export-notion.yml
+++ b/.github/workflows/export-notion.yml
@@ -12,7 +12,8 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: false
+          fetch-depth: 0
 
       - uses: 0x7d4/notionweb@v0.0.1-alpha.4
         with:
@@ -20,11 +21,8 @@ jobs:
           token-v2: ${{ secrets.NOTION_TOKEN_V2 }}
           file-token: ${{ secrets.NOTION_FILE_TOKEN }}
 
-      - name: Commit changes
-        run: |
-          ls -al
-          git config --global user.name "GitHub Actions"
-          git config --global user.email "actions@github.com"
-          git add .
-          git commit -m "Update Notion workspace"
-          git push
+      - name: Push changes
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          branch: ${{ github.ref }}
