--- a/.github/workflows/export-notion.yml
+++ b/.github/workflows/export-notion.yml
@@ -12,8 +12,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
         with:
-          persist-credentials: false
-          fetch-depth: 0
+          tokne: ${{ secrets.GITHUB_TOKEN }}
 
       - uses: 0x7d4/notionweb@v0.0.1-alpha.4
         with:
@@ -22,7 +21,13 @@ jobs:
           file-token: ${{ secrets.NOTION_FILE_TOKEN }}
 
       - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
+        # uses: ad-m/github-push-action@master
+        # with:
+        #   github_token: ${{ secrets.GITHUB_TOKEN }}
+        #   branch: ${{ github.ref }}
+        run: |
+          git config --global user.name "Github Actions"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Update Notion workspace"
+          git push
